--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "method-override": "^2.3.6",
     "mongoose": "^4.5.4",
     "request": "^2.73.0",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "xlsx": "^0.8.0"
   }
 }
